--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animales | Domesticos</title>
+
+    <!-- Keywords -->
+
+    <meta name="keywords" content="cuidados animales, perros, gatos, conejos, hamster, alimentación, limpieza, domesticos">
+
+    <!-- Descripción -->
+
+    <meta name="Página guia para cuidados de animales domesticos">
 
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -39,7 +47,9 @@
         <h2 id="h2_header">Bienvenido a la pagina de cuidado para animales domésticos</h2>
             <div>
                     <p> Bienvenido, en esta página vamos a intentar recopílar información sobre el cuidado de los animales domesticos mas comunes. (la pagina esta empezando su desarrollo, sepa disculpar)</p>
-                       <!-- Seleccion de interes -->
+                    <p> Seleccione la opción que está buscando abajo</p>   
+                    
+                    <!-- Seleccion de interes -->
                 <ul id="ul_header">
                     
                     <li>
