--- a/paginas/gato.html
+++ b/paginas/gato.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cuidados | Gatos</title>
 
+    <!-- Keywords -->
+
+    <meta name="keywords" content="cuidados animales, perros, gatos, conejos, hamster, alimentación, limpieza, domesticos">
+
+    <!-- Descripción -->
+
+    <meta name="Página guia para cuidados gatos">
 
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -35,20 +42,26 @@
         <!-- esquema principal -->
 
     <div id="gatos1">
-        <img src="https://dummyimage.com/200x200/000/fff" alt="imagen_gato"  id="gatos2" class="imagenes_tipo2">
+        <img src="https://dummyimage.com/200x200/000/fff" alt="imagen_gato" class="imagenes_tipo2">
 
         <div>
             <h2 id="gatos4">Alimentacion</h2>
-            <p style="color: #a1b62d;"  id="gatos3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex inventore numquam sed reiciendis accusantium animi vero aspernatur sequi. Dicta alias iusto porro voluptate maxime quae vitae possimus nobis rem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum impedit id illo quisquam mollitia earum, laboriosam corrupti ullam amet atque recusandae magnam! Veniam quasi id omnis voluptatum officia accusamus distinctio!</p>
+            <p style="color: #a1b62d;"  id="gatos3">Alimenta a tu gato en una zona tranquila donde pueda relajarse y que esté bien lejos de su caja de arena. También toma en cuenta que necesita ser un espacio donde tú te sientas cómodo y sea adecuado para ambos. Las cocinas, e incluso los comedores, son lugares ideales para tu gatito.</p>
+            <p style="color: #a1b62d;"  id="gatos3">Como consejo recomendamos utilizar siempre un plato limpio, ya que los gatos son criaturas a las que les gusta el aseo, además de una obvia cuestion de higene</p>
         </div>
     </div>
 
     <div id="gatos1">
-        <img src="https://dummyimage.com/200x200/000/fff" alt="imagen_gato2"  id="gatos2" class="imagenes_tipo2">
+        <img src="https://dummyimage.com/200x200/000/fff" alt="imagen_gato2"  class="imagenes_tipo2">
 
         <div>
             <h2 id="gatos4">Limpieza</h2>
-            <p style="color: #789413;"  id="gatos3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex inventore numquam sed reiciendis accusantium animi vero aspernatur sequi. Dicta alias iusto porro voluptate maxime quae vitae possimus nobis rem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum impedit id illo quisquam mollitia earum, laboriosam corrupti ullam amet atque recusandae magnam! Veniam quasi id omnis voluptatum officia accusamus distinctio!</p>
+            <p style="color: #789413;"  id="gatos3"> Un consejo primordial es que si conseguis que tu gato se acostumbre al aseo habitual desde una temprana edad, se les hará la vida mucho más fácil a los dos en el futuro</p>
+            <p style="color: #789413;"  id="gatos3">La frecuencia de cepillado de tu gato varía según el largo de su pelaje, una raza de pelaje largo requerirá cuidados diarios, mientras que un pelaje corto conlleva menos esfuerzo</p>
+            <h3 style="color :#3d4b0c">Cómo cepillar a tu gatito</h3>
+            <p>Pone al gatito en tu regazo y ofrécele el cepillo para que lo huela. En cuanto sepan que es seguro, muchos gatos se frotarán la cara sobre él.</p>
+            <p>Comenzá a cepillarlo con cuidado, desde su lomo y luego por los costados de su cuerpo.</p>
+            <p>Repite esto varias veces al día, incrementando poco a poco la duración de tiempo del cepillado.</p>
         </div>
 
     </div>
