--- a/paginas/hamster.html
+++ b/paginas/hamster.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cuidados | Hamsters</title>
+
+    <!-- Keywords -->
+
+    <meta name="keywords" content="cuidados animales, perros, gatos, conejos, hamster, alimentación, limpieza, domesticos">
+
+    <!-- Descripción -->
+
+    <meta name="Página guia para cuidados de hamsters">
 
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -17,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
 
-    <title>Cuidados | Hamsters</title>
+
 </head>
 <body>
    <!-- nav -->
@@ -37,12 +45,12 @@
   </nav>
 
         <!-- esquema principal -->
-    
     <div id="hamster1">
         <div>
             <h2 style="color: #000000;">Alimentacion</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat veniam alias odio nam iusto voluptas autem repellendus cupiditate aliquid obcaecati error quos provident voluptatum delectus animi explicabo, labore quisquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. A voluptate delectus libero mollitia quaerat hic expedita doloribus inventore quis laboriosam repellat fuga, placeat quas soluta earum numquam repudiandae sunt porro?</p>
-
+            <p>La Alimentacion de los hamsters es bastante distinta en su forma de preparar, a diferencia de otros animales domesticos, para ellos es mejor realizar mezclas de variedades de alimentos, ademas de seguir un regimen especial.</p>
+            <p>Fruta y verdura: pequeñas cantidades todos los días, (brócoli, hojas de la remolacha, zanahorias, manzana, tomate,etc</p>
+            <p>Adición de proteína: 1-2 veces por semana: jamon, huevo duro, etc</p>
         </div>
 
         <img src="https://dummyimage.com/300x300/000/fff" alt="imagen_hamster" id="imagenes_tipo1">
@@ -51,14 +59,16 @@
     <div id="hamster2">
         <div id="perroparte2sub2">
             <h2 style="color: #000000;">Limpieza</h2>
-            <p style="color:#3a46f1;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore repellat sunt dolorem eligendi. Assumenda ea quas ullam, corrupti, nemo pariatur autem ipsam inventore dolorum nisi consequatur sit ratione molestias dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis earum illum ut aliquid ipsa at quas omnis fugiat beatae aperiam eos labore iusto inventore neque, autem, molestias consequatur nemo nulla!</p>
-
+            <p style="color:#3a46f1;">Como sabemos, los hamsters viven en jaulas especiales para ellos, por ello la limpieza diaria de estas es de suma importancia. Las jaulas sucias pueden llegar a provocar enfermedades a tu animal, así que llevar al día la limpieza de su jaula puede ayudarte a mantenerlo sano.</p>
+            <h3 style="color: #000000;" >Baños secos</h3>
+            <p style="color:#3a46f1;">¿Conoces los champús en seco? También se usan a menudo en perros y gatos y resultan una opción estupenda igual para los roedores. Se trata de un producto que no necesita el uso de agua, sino que se aplica directamente sobre el pelaje del animal y lo limpia de forma efectiva, eliminando también los malos olores.</p>
+            <h3 style="color: #000000;">Baños de arena</h3>
+            <p style="color:#3a46f1;">La mejor opción para los roedores y, además, la más sencilla. Existe un tipo de arena especial diseñada para que los hámsters se revuelquen en ella y eliminen toda la suciedad de su cuerpo. Además, ¡les encanta hacerlo! Solo tienes que ponerla en un recipiente tipo bañera (puede ser un tupper, por ejemplo) y colocarlo dentro de su jaula.</p>
         </div>
 
         <img src="https://dummyimage.com/300x300/000/fff" alt="imagen_hamster2" id="imagenes_tipo1">
-
-    </div>
-         <!-- footer -->
+      </div> 
+      <!-- footer -->
     <footer>
       <ul id="ul_footer">
         <li>
