--- a/paginas/perro.html
+++ b/paginas/perro.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cuidados | Perros</title>
+
+    <!-- Keywords -->
+
+    <meta name="keywords" content="cuidados animales, perros, gatos, conejos, hamster, alimentación, limpieza, domesticos">
+    
+    <!-- Descripción -->
+
+    <meta name="Pagina guia para cuidados de perros">
 
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -41,7 +49,7 @@
     <div id="perronuevo">
         <div>
             <h2 style="color: #000000;">Alimentacion</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat veniam alias odio nam iusto voluptas autem repellendus cupiditate aliquid obcaecati error quos provident voluptatum delectus animi explicabo, labore quisquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. A voluptate delectus libero mollitia quaerat hic expedita doloribus inventore quis laboriosam repellat fuga, placeat quas soluta earum numquam repudiandae sunt porro?</p>
+            <p>Para la mayoría de los canes, la alimentación del perro es dos veces al día, una por la mañana y otra por la noche, preferiblemente a la misma hora es ideal. Es importante encontrar un alimento que no sólo sea 100% completo y equilibrado, sino que también tenga un sabor que le guste a tu perro. Otros factores, como la edad, el tamaño del perro y si tiene necesidades especiales, influyen en la decisión de qué alimento darle.</p>
 
         </div>
 
@@ -51,8 +59,12 @@
     <div id="perroparte2">
         <div id="perroparte2sub2">
             <h2 style="color: #000000;">Limpieza</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore repellat sunt dolorem eligendi. Assumenda ea quas ullam, corrupti, nemo pariatur autem ipsam inventore dolorum nisi consequatur sit ratione molestias dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis earum illum ut aliquid ipsa at quas omnis fugiat beatae aperiam eos labore iusto inventore neque, autem, molestias consequatur nemo nulla!</p>
-
+            <p>El baño, el cepillado del pelo y dientes, los oídos y ojos es fundamental para el aseo de los canes.<br>
+               La hora del baño es una lotería. Puede que a tu mascota le encante el agua y disfrute del momento, o por el contrario que la aborrezca y se convierta en un suplicio. En cualquier caso, bañar a tu perro es fundamental para proporcionarle una higiene correcta.</p>
+               <p>Usa un champú especialmente formulado para canes y que se adapte a su tipo de pie</p>
+               <p>Con bañarle una vez al mes si tiene pelaje largo será suficiente. Si su pelo es corto se recomienda un baño cada dos o tres meses</p>
+               <p>Asegurate de que el agua no está demasiado caliente.</p>
+               <p>En caso de que su perro pierda mucho pelo diariamente se recomienda cepillado diario.</p>           
         </div>
 
         <img src="https://dummyimage.com/300x300/000/fff" alt="imagen_perro2" id="imagenes_tipo1">
