--- a/paginas/conejo.html
+++ b/paginas/conejo.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cuidados | Conejos</title>
+
+    <!-- Keywords -->
+
+    <meta name="keywords" content="cuidados animales, perros, gatos, conejos, hamster, alimentación, limpieza, domesticos">
+
+    <!-- Descripción -->
+
+     <meta name="Página guia para cuidados de conejos">
 
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -44,16 +52,19 @@
 
         <div>
             <h2 id="gatos4">Alimentacion</h2>
-            <p style="color: #f76e6e;"  id="gatos3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex inventore numquam sed reiciendis accusantium animi vero aspernatur sequi. Dicta alias iusto porro voluptate maxime quae vitae possimus nobis rem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum impedit id illo quisquam mollitia earum, laboriosam corrupti ullam amet atque recusandae magnam! Veniam quasi id omnis voluptatum officia accusamus distinctio!</p>
-        </div>
+            <p style="color: #f76e6e;"  id="gatos3"> Los conejos son herbívoros, por lo que se alimentan principalmente de vegetales. Hay ciertas verduras que están muy recomendadas a partir de los tres meses (todo siempre crudo), como apio, acelga, pepino, zanahoria, remolacha, espinaca, lechuga (solo las hojas verdes) y brócoli, entre otras.</p>
+            <p style="color: #f76e6e;"  id="gatos3"> Las frutas también son una opción, aunque se recomienda darles muy poca cantidad, por su alto contenido en azúcar, opciones como manzana, cereza, frutilla, kiwi, mango y tomate.</p>
+            <p style="color: #f76e6e;"  id="gatos3"> Además, es muy importante complementar su alimentación con agua (lo más limpia posible) todos los días y con heno (se compra en veterinarias y pet shops).</p>
+          </div>
     </div>
 
     <div id="conejo1">
         <img src="https://dummyimage.com/200x200/000/fff" alt="imagen_conejo2"  id="gatos2" class="imagenes_tipo2">
 
         <div>
-            <h2 id="gatos4">Limpieza</h2>
-            <p style="color: #f73636;"  id="gatos3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex inventore numquam sed reiciendis accusantium animi vero aspernatur sequi. Dicta alias iusto porro voluptate maxime quae vitae possimus nobis rem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum impedit id illo quisquam mollitia earum, laboriosam corrupti ullam amet atque recusandae magnam! Veniam quasi id omnis voluptatum officia accusamus distinctio!</p>
+            <h2 id="gatos4">Cuidados</h2>
+            <p style="color: #f73636;"  id="gatos3"> Los conejos duermen entre 6 y 8 horas diarias, aunque pueden llegar a dormir hasta 10 si las condiciones son óptimas. Para dormir, no necesitan que sea de noche, pueden hacerlo en cualquier momento.<br>Eso sí, si se los interrumpen varias veces y se sienten intranquilos, tenderán a quedarse inquietos y en alerta. Por eso, no es recomendable que duerman en la cama con humanos, ya que, además de despertarse y ponerse inquietos, querrán cambiar de posición varias veces. Para que tenga un buen descanso, lo mejor es acostumbrarlos a que tengan un espacio propio o una jaula al momento de dormir, lo más lejos posible de ruidos fuertes o disturbios.</p>
+
         </div>
 
     </div>
